--- a/pain-speak/src/index.css
+++ b/pain-speak/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background: #F8F8F8;
+  background: #ffffff;
 }
 
 code {
