--- a/pain-speak/src/Card.css
+++ b/pain-speak/src/Card.css
@@ -6,13 +6,23 @@
 
 
     width: 29.1875rem;
+    min-width: 30%;
     height: 14.9375rem;
 
-    background: #FFF6F4;
+    background: #fafafa;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
 
     margin: 5vh 1vw;
+
 }
+
+@media only screen and (max-width: 767px) {
+    .card {
+      padding: 0 !important;
+      margin: 0vh 0vw !important;
+    }
+    }
 
 
 
