--- a/pain-speak/src/Nav.css
+++ b/pain-speak/src/Nav.css
@@ -10,7 +10,7 @@
     margin: 0;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.5);
 
-    border-radius: 0% 0%  5% 5%;
+    /* border-radius: 0% 0%  5% 5%; */
 }
 
 .logo{
