--- a/pain-speak/src/Card.css
+++ b/pain-speak/src/Card.css
@@ -5,25 +5,17 @@
     align-items: center;
 
 
-    width: 29.1875rem;
-    min-width: 30%;
-    height: 14.9375rem;
+    width: 30rem;
+    /* min-width: 30%; */
+    height: 15rem;
 
     background: #fafafa;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
 
-    margin: 5vh 1vw;
+    margin: 4vh 0vw 4vh 0vw;
 
 }
-
-@media only screen and (max-width: 767px) {
-    .card {
-      padding: 0 !important;
-      margin: 0vh 0vw !important;
-    }
-    }
-
 
 
 
@@ -31,18 +23,14 @@
 
 .side-img{
     width: 15rem;
-    height: 15.0625rem;
+    height: 15rem;
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-/* .dis-pic{    
-    width: 9.375rem;
-    height: 11.48725rem;
-}
- */
+
 
 
 
@@ -56,7 +44,7 @@
 .h1-text{
     color: #000;
     font-family: Outfit;
-    font-size: 1.4375rem;
+    font-size: 1.5rem;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -74,5 +62,4 @@
     letter-spacing: 0.1875rem;
     text-transform: uppercase;
 }
-
 
