--- a/pain-speak/src/Footer.css
+++ b/pain-speak/src/Footer.css
@@ -1,8 +1,8 @@
 .foot{
     display: flex;
+    align-items: center;
     justify-content: center;
-    text-align: center;
-    background: rgb(27, 27, 29);
+    background-color: rgb(27, 27, 29);
 
     padding-top: 1%;
     padding-bottom: 1%;
