--- a/pain-speak/src/css/Footer.css
+++ b/pain-speak/src/css/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(27, 27, 29);
+    background-color: #2C3333;
 
     padding-top: 1%;
     padding-bottom: 1%;
