--- a/pain-speak/src/css/Card.css
+++ b/pain-speak/src/css/Card.css
@@ -9,7 +9,7 @@
     /* min-width: 30%; */
     height: 15rem;
 
-    background: #fafafa;
+    background: #EEEEEE;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
 
