--- a/pain-speak/src/css/Nav.css
+++ b/pain-speak/src/css/Nav.css
@@ -6,7 +6,7 @@
     padding-top: 1%;
     padding-bottom: 1%;
 
-    background: #fafafa;
+    background: #EEEEEE;
     margin: 0;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.5);
 
